# Astral-Ray-Scratchpad

./: .gitignore  .gitignoreU\  b.fits  requirements.txt  theoretical_spectrum_interpolated.csv  theoretical_spectrum_processed.csv
Arnaav/: HEATMAP.py  combine_fits.py  combinefits.py  data_prep.py  data_prep_2.py  json_to_plot.py  peak_find.py  photon_count.py  rebinn.py  solar_model_pipeline.py
Khushi/: Binning  Readme.md  b_fits.ipynb  ch2_cla_l1_20240704T233844921_20240704T233850671_binned.fits  interpolated_theoretical_spectrum.csv  interpolated_theoritical_scattered_spectrum.ipynb  modelop_20210827T210316000_20210827T210332000(1).txt  total_scattered_spectrum.csv
Neeraj/: get_four_coordinates.py  neeraj_model_handcrafted.py  ratio_scatter_incident.cpp
Pratham/: GDL_script.py  bicubic_img.py  ch2_xsm_20210827_v1_level2.gti  ch2xsm_spectralFit_isothermal_demo(1).py  counts_flux_xsmgenspec.py  experiments.ipynb  fits_to_csv.py  gaussian_fit_model.py  gdl_script.py  guassian_fit.py  helper_get_xrf.py  spherical_coord_sys.ipynb  xsm_pha_to_plot_channels_counts.py
Ricktho/: ch2xsm_spectralFit_isothermal_demo(1).py  ch2xsm_spectralFit_isothermal_demo.py
Soumik/: Readme.md  client-flare.py  client.py  constants.py  file_downloader.py  final_model_handcrafted.py  get_class_fits_of_lat_long.py  get_fits_of_lat_long.py  get_xsm_pha_of_given_time.py  intersection-updater.py  main.py  ml_runner.py  model_runner.py  new.txt  new_model_handcrafted.py  photon_count_calculator.py  pipe-consumer.py  pipe_consumer.py  process-add-visible-peak.py  process-combine-and-find-abundance.py  process-combine-fits.py  process-combine-pha.py  process-feed-the-machine.py  process-l1.py  (+19 more)
sd/class_data/process/: Cargo.toml  test.gti  test.lc  test.sa
sd/class_data/process/src/: main.rs  model.rs  mongo.rs  queue.rs  read.rs  server.rs
sd/img/: Cargo.toml
sd/img/src/: color.rs  main.rs  mongo.rs  points.rs
(+311 files in other folders)
