[package]
name = "process"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = { version = "3.1.0", features = ["sync"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
redis-work-queue = "0.3.0"
async-recursion = "1.0.5"
fitrs = "0.5.0"
bson = { version = "2", features = [
    "chrono-0_4",
] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
rayon = "1.10.0"
futures = "0.3.31"
async-std = { version = "1", features = ["attributes", "tokio1"] }
dashmap = "6.1.0"
tokio-runtime = "0.0.0"
actix-web = "4"
actix-files = "0.6.6"


[dependencies.redis]
version = "0.26.1"
